# dj-dynamic-templates

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: check.yml  python-app.yml  python-publish.yml
dj_dynamic_templates/: admin.py  apps.py  forms.py  models.py  views.py
dj_dynamic_templates/management/commands/: sync_templates.py
dj_dynamic_templates/migrations/: 0001_initial.py
dj_dynamic_templates/templates/: category_change_form.html  template_change_form.html
