[tool.poetry]
name = "dj_dynamic_templates"
version = "1.0.0"
description = ""
authors = ["sudheerkumar <v.sudheerkumar91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
psycopg2 = "^2.9.9"
django-markdownx = "^4.0.7"
setuptools = "^69.0.3"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
